# myNN

./: CMakeLists.txt
lib/layer/: CMakeLists.txt
lib/layer/include/: layer.hpp
lib/layer/src/: layer.cpp
lib/matrix/: CMakeLists.txt
lib/matrix/include/: matrix.hpp
lib/matrix/src/: matrix.cpp
lib/neuron/: CMakeLists.txt
lib/neuron/include/: neuron.hpp
lib/neuron/src/: neuron.cpp
lib/nn/: CMakeLists.txt
lib/nn/include/: layer.hpp  matrix.hpp  neuron.hpp
lib/nn/src/: layer.cpp  matrix.cpp  neuron.cpp
src/: main.cpp
